<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.blacio.squarespuzzle.InstructActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_weight="1"
        android:text="@string/title"
        android:textSize="@dimen/instit"
        android:padding="10dp"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:fontFamily="serif-monospace" />

    <ViewFlipper
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="9"
        android:id="@+id/instr_flipper">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="4">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/black"
                android:layout_weight="1"
                android:text="@string/instr1"
                android:textSize="@dimen/insdim"
                android:padding="7dp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:fontFamily="casual" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/pic1"
                android:layout_weight="3"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="4">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/black"
                android:layout_weight="1"
                android:text="@string/instr2"
                android:textSize="@dimen/insdim"
                android:padding="7dp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:fontFamily="casual" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/pic2"
                android:layout_weight="3"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/black"
                android:layout_weight="1"
                android:text="@string/instr3"
                android:textSize="@dimen/insdim"
                android:padding="7dp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:fontFamily="casual" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/black"
                android:layout_weight="1"
                android:text="@string/instr4"
                android:textSize="@dimen/insdim"
                android:padding="7dp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:fontFamily="casual" />

        </LinearLayout>


    </ViewFlipper>

</LinearLayout>
